--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -211,7 +211,7 @@ We also have to take into account the expansion of the universe, which we neglec
 \section{Collisionless gas}
 \label{sec:collisionless-gas}
 
-We now consider a collisionless gas, such as dark matter. In this case, there is no reason to impose thermodynamic equilibrium, not even locally. As a result, we cannot describe the gas with the thermodynamic variables we used before, since they are only defined in (at least local) thermodynamic equilibrium. We thus need to take one step back and consider distribution functions $f(\vec{x}, \vec{p}, t)$, whose dynamics are given by the collisionless Boltzmann equation,
+As we already saw the fluid approximation is only valid, if the mean free path of the particles is small enough. We now consider a collisionless gas, such as dark matter. In this case, the fluid approximation is not valid and there is also no reason to impose thermodynamic equilibrium, not even locally. As a result, we cannot describe the gas with the thermodynamic variables we used before, since they are only defined in (at least local) thermodynamic equilibrium. We thus need to take one step back and consider distribution functions $f(\vec{x}, \vec{p}, t)$, whose dynamics are given by the collisionless Boltzmann equation,
 \begin{align*}
 	\dv{f}{t}
 	&= \pdv{f}{t} + \pdv{f}{p^i} \pdv{p^i}{t} + \pdv{f}{x^i} \pdv{x^i}{t}\\
@@ -219,16 +219,16 @@ We now consider a collisionless gas, such as dark matter. In this case, there is
 \end{align*}
 As we have already seen before, we can take moments $\langle Q \rangle$ of the distribution functions, which are defined as
 \begin{align*}
-	\langle Q \rangle = \frac{1}{n} \int \dd{^3p} Q f(\vec{x}, \vec{p}, t),
+	\langle Q \rangle = \frac{1}{n} \int \dd{^3\vec{p}} Q f(\vec{x}, \vec{p}, t),
 \end{align*}
-with the comoving number density $n(\vec{x}, t) = \int \dd{^3p} f(\vec{x}, \vec{p}, t)$.
+with the comoving number density $n(\vec{x}, t) = \int \dd{^3\vec{p}} f(\vec{x}, \vec{p}, t)$.
 Some moments are
 \begin{itemize}
 	\item the density $\rho(\vec{x}, t)$, which is obtained with $Q = m$, where $m$ is the mass of a particle, and
-	\item the bulk velocity $\langle v_i \rangle$, which is obtained with $Q = v_i = p_i/(m n)$.
+	\item the bulk velocity $\langle v_i \rangle$, which is obtained with $Q = v_i = p_i/(m a)$.
 \end{itemize}
 
-We take moments of the Boltzmann equation. One can show\sidenote{For more details, have a look at \cref{ssec:collisionless-eom}.} that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
+Taking the moments of the Boltzmann equation one can show\sidenote{For more details, have a look at \cref{ssec:collisionless-eom}.} that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
 \begin{align*}
 	\frac{\Grad_i p}{\rho}
 	\to \sum_{j=1}^3 \pdv{}{x_j}
@@ -238,7 +238,7 @@ where
 \begin{align*}
 	\sigma_{ij} = \avg{v_i v_j} - \avg{v_i} \avg{v_j}.
 \end{align*}
-The stress tensor is defined as $\rho \sigma_{ij}^2$.
+The stress tensor is defined as $\rho \sigma_{ij}^2$ and plays the role of the pressure.
 
 If the stress tensor is small, we get the fluid equations with $\Grad p = 0$ and $c_s^2=0$, so a pressureless fluid.
 
