Fix typos in ch 2

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -623,7 +623,7 @@ The masses of neutrons and protons are slightly different, so their abundances a
 \end{align*}
 where $\Delta m = m_n - m_p \propto \SI{1.3}{\MeV}$ is the mass difference.
 T
-he neutrons are unstable to beta decay $n \leftrightarrow p + e + \bar{\nu}_e$, and thus the neutron-to-proton ratio continues to decrease.
+The neutrons are unstable to beta decay $n \leftrightarrow p + e + \bar{\nu}_e$, and thus the neutron-to-proton ratio continues to decrease.
 The neutron abundance is then
 \begin{align*}
 	X_n = \frac{n_n}{n_n + n_p} \propto e^{-t/\tau_n},
@@ -683,7 +683,7 @@ For given initial conditions, the ionization fraction can be calculated as a fun
 \begin{marginfigure}
 	\centering
 	\includegraphics[width=\textwidth]{img/ch-02/ionization.png}
-	\caption{The ionization $X_e$ as a function of redshift. Before recombination (at high redshift), the universe is fully ionized with $X_e=1$. The Saha solution assumes thermal equilibrium, which is only valid until recombination. After the freeze-out, a residual ionization fraction ($X_e \approx \num{e-3}$)remains.}
+	\caption{The ionization $X_e$ as a function of redshift. Before recombination (at high redshift), the universe is fully ionized with $X_e=1$. The Saha solution assumes thermal equilibrium, which is only valid until recombination. After the freeze-out, a residual ionization fraction ($X_e \approx \num{e-3}$) remains.}
 	\label{fig:ionization}
 \end{marginfigure}
 
@@ -751,6 +751,7 @@ As radiation, we classify those particles that are still relativistic today. Acc
 
 \subsection*{Baryons}
 Baryons from the Big Bang nucleosynthesis contribute $\Omega_text{b} \approx 0.05$. They mostly occur in two forms:
+Baryons from the Big Bang nucleosynthesis contribute $\Omega_\text{b} \approx 0.05$. They mostly occur in two forms:
 \begin{itemize}
 	\item Even though only ten percent of baryons are found in stars, they are the largest fraction of visible matter.
 	\item The rest of the baryons is in the form of various phases, such as cold gas, warm gas, and hot gas, both in the intergalactic and the interstellar medium.
@@ -779,7 +780,7 @@ From the first Friedmann equation, we know that a constant energy density result
 
 There are a few possible candidates:
 \begin{itemize}
-	\item The cosmological constant $\Lambda$ which is independent of time corresponds to $w=-1$.
+	\item The time-independent cosmological constant $\Lambda$, which corresponds to $w=-1$.
 	\item A model called \emph{quintessence}, which is a dynamical scalar field, would give rise to another form of energy. Since it is dynamical, you can map it to an effective fluid, with a $w \in (-1, -1/3)$ that varies in time.
 	\item There could be a theory of gravity that can improve upon or replace general relativity.
 \end{itemize}
