--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -409,7 +409,7 @@ We can describe the transition from early times to the matter dominated era by a
 where
 \begin{itemize}
 	\item $\Phi_{p, k}$ is the primordial potential, which is the potential at initial conditions,
-	\item $T(k)$ is the transfer functions, which obeys $T \to 1$ as $k \to 0$,
+	\item $T(k)$ is the transfer function, which is normalized $T \to 1$ as $k \to 0$,
 	\item $D(a)$ is the growth factor, normalized such that $D(a) = a$ in the matter era,\sidenote{We have derived $D(a) \propto a$ before, so we can do this.} and
 	\item the $9/10$ factor is the large scale suppression which we have seen in the previous diagram.
 \end{itemize}
@@ -425,16 +425,16 @@ The solution for different cases is shown in \cref{fig:transfer-function}.
 
 At small $k$, $T = 1$ as required.
 \begin{itemize}
-	\item In the \ac{cdm} model, $T(k)$ is suppressed at $k \gg k_\text{eq}$, as we have seen before. We find $T(k) \propto (k/k_\text{eq})^2 \ln(k/k_\text{eq})$.
-	\item In the \ac{hdm} model\sidenote{For example, dark matter which is made up of neutrinos}, the perturbations are damped strongly due to free streaming when $k > k_\nu$.
-	\item In the baryon model, dark matter is made up of baryons, which is ruled out for different reasons, but we can still look at the solution. Here, two processes act in addition to $k_\text{eq}^{-1}$ suppression:
+	\item In the \ac{cdm} model, $T(k)$ is suppressed at $k \gg k_\text{eq} \approx 0.073$ Mpc$^{-1}\Omega_m h^2$, as we have seen before. We find $T(k) \propto (k/k_\text{eq})^{-2} \ln(k/k_\text{eq})$.
+	\item In the \ac{hdm} model\sidenote{For example, dark matter which is made up of neutrinos}, the perturbations are additionally damped strongly due to free streaming when $k > k_\nu \approx 0.2 \frac{m_\nu}{30 \text{eV}}$ Mpc$^{-1}$.
+	\item In the baryon model, we consider a universe which is made up of baryons, photons and relativistic neutrinos, which is ruled out for different reasons, but we can still look at the solution. Here, two processes act in addition to $k_\text{eq}^{-1}$ suppression:
 	\begin{itemize}
-		\item Jeans instability for $k > k_J$ inhabits growth, and instead leads to oscillations. We have seen these as oscillations in time at constant $k$ before, while here they are shown as oscillations in $k$ at constant time.
+		\item Jeans instability for $k > k_J$ leads to oscillations instead of growth. We have seen these as oscillations in time at constant $k$ before, while here they are shown as oscillations in $k$ at constant time.
 		\item Silk damping.
 	\end{itemize}
 	As a result, $T(k)$ is suppressed and oscillates on small scales.
 	\item In a mixed model\sidenote{\SI{70}{\percent} \ac{cdm} and \SI{30}{\percent} \ac{hdm}}, nothing very interesting happens.
-	\item In \ac{cdm} + baryons (blue line), small oscillations occur around the \ac{cdm} curve.
+	\item In \ac{cdm} + baryons, small oscillations occur around the \ac{cdm} curve.
 \end{itemize}
 
 
