--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -449,7 +449,7 @@ The quantum harmonic oscillator is described by the Hamiltonian
 which gives rise to equally spaced energy levels
 \begin{align*}
 	E_n = \frac{\hbar}{m \omega}
-	\left( m + \frac{1}{2} \right),
+	\left( n + \frac{1}{2} \right),
 \end{align*}
 for $n \in \set{0, 1, 2, \dots}$. We consider a state $\ket{n}$, which deviates from its average position by
 \begin{align*}
