Fix Quasar redshift

--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -488,7 +488,7 @@ We thus see absorption lines at wavelengths $\lambda_\mathrm{α} (1 + z_i)$.
 \end{figure}
 
 The spectrum of a quasar is shown in \cref{fig:quasar-spectrum}.
-The central peak is the Ly-α emission of the quasar itself, which is redshifted to around \SI{5400}{\angstrom}, indicating $z_q \approx 3.5$.
+The large peak is the Ly-α emission of the quasar itself, which is redshifted to around \SI{8700}{\angstrom}, indicating $z_q \approx 6$.
 On the left side, there are many absorption lines, corresponding to Ly-α absorption at different redshifts.
 There are also a few absorption lines on the right from metals.
 
