--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -811,8 +811,8 @@ The bias depends on the galaxy sample, the scale $k$, and redshift $z$. Fortunat
 
 There are two kinds of galaxy surveys:
 \begin{itemize}
-	\item Imaging surveys, such as \textsc{poss}/\textsc{apm}, \textsc{des}, and \textsc{sdss}, measure the position and shape of galaxies.
-	\item Spectroscopy surveys, such as \textsc{sdss}, \textsc{2df}, and Wiggle-z, measure the position and redshift of galaxies. A slice of the galaxy map measured by \textsc{sdss} is shown in \cref{fig:spectroscopic-survey}.
+	\item Imaging surveys, such as \textsc{poss}/\textsc{apm}, \textsc{des}, and \textsc{sdss}, measure the position in sky and the shape of galaxies.
+	\item Spectroscopy surveys, such as \textsc{sdss}, \textsc{2df}, and Wiggle-z, measure the position in sky and the redshift of galaxies. A slice of the galaxy map measured by \textsc{sdss} is shown in \cref{fig:spectroscopic-survey}.
 \end{itemize}
 
 \begin{figure}
@@ -839,7 +839,7 @@ The current measurements confirm the \textsc{Λcdm} model, even though there are
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\textwidth]{img/ch-03/apm.pdf}
-	\caption{Results of the \textsc{apm} survey.}
+	\caption{Results of the \textsc{apm} survey show 2 dimensional clustering.}
 	\label{fig:apm}
 \end{figure}
 
