--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -2,7 +2,7 @@
 
 \section{Approaches for non-linear structure formation}
 
-Remember that at late times, perturbations become non-linear, and that small-scale perturbations become non-linear first.
+Remember that at late times, perturbations become non-linear ($\delta > 1$), and that according to the Hiearchical structure formation small-scale perturbations become non-linear first.
 Perturbations collapse to form dark halos, filaments, and pancakes.
 This structure is called the cosmic web, which is a signature of non-linear gravitational instability in an expanding universe.
 % movie (illustris collaboration)
@@ -10,16 +10,11 @@ This structure is called the cosmic web, which is a signature of non-linear grav
 Studying the evolution of non-linear perturbations is very difficult, and no exact analytic solutions have yet been found in the fully non-linear regime.
 There are different approaches to tackle the problem:
 \begin{itemize}
-	\item Numerical simulations
-	\item Higher order perturbation theory is only a valid approach for mildly non-linear perturbations and scales.
-	On small scales, this does not work.
-	\item The Halo model, which is a simplified model, is very successful in describing the formation, evolution, and statistics of collapsed structures.
-=======
-	\item Numerical simulations give accurate results, but they are resource-intensive and give less insight than a (hypothetical) fully analytical approach.
-	\item Higher order perturbation theory is only a valid approach for mildly non-linear perturbations and scales.
+	\item Numerical simulations: They give accurate results, but they are resource-intensive and give less insight than a (hypothetical) fully analytical approach.
+	\item Higher order perturbation theory: This is only a valid approach for mildly non-linear perturbations and scales.
 	In particular, it is not a good approach for small-scale structures.
-	\item The Halo model, which is a simplified analytical model, is very successful in describing the formation, evolution, and statistics of collapsed structures.
->>>>>>> 606bc2ca57c4ed6f1a9ba40631c6823f0f8a9ba5
+	\item Simplified models, in e.g. the Halo model: This is a very successful model in describing the formation, evolution, and statistics of collapsed (non-linear) structures.
+% >>>>>>> 606bc2ca57c4ed6f1a9ba40631c6823f0f8a9ba5
 \end{itemize}
 
 We will study mainly the Halo model. We start with a model that only contains dark matter, and later introduce baryons.
